Z-index fix - header component

--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -12,10 +12,11 @@
     box-sizing: border-box;
     animation: slideDown 1s;
     animation-fill-mode: both;
+    position: relative;
+    z-index: 50;
 }
 
 .Navigation {
-    
     .nav-list {
         margin: 0;
         display: flex;
